--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,7 @@
 
 
             <input type="hidden" name="accessKey" value="ef089844-b842-4fe9-a1b4-d247666b2acf">
-            <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html?#">
+            <input type="hidden" name="redirectTo" value="atividade-3-front-542m.vercel.app">
 
         </form>
     </section>
