--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 class="card-img-top" alt="...">
             <div class="card-body" >
                 <h5 class="card-title" id="cabeceiras">cabeceiras</h5>
-                <p class="card-text">Cabeceiras feitas sob medida com base em sua escolha de tecido, modelo e designe
+                <p class="card-text">Cabeceiras feitas sob medida com base em sua escolha de tecido, modelo e design
                 </p>
             </div>
             <div class="card-footer">
